(lang dune 3.12)

(name aoc)

(generate_opam_files true)

(source
 (github frangkli/aoc2023))

(authors "Frank Li")

(maintainers "Frank Li")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (depends ocaml dune core))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
